--- a/NeosDocumentImport/NeosDocumentImport.csproj
+++ b/NeosDocumentImport/NeosDocumentImport.csproj
@@ -37,68 +37,43 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="0Harmony, Version=2.2.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Lib.Harmony.2.1.1\lib\net45\0Harmony.dll</HintPath>
+    <Reference Include="0Harmony">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
     <Reference Include="BaseX">
-      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\NeosVR\Neos_Data\Managed\BaseX.dll</HintPath>
     </Reference>
-    <Reference Include="CloudX.Shared, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
-    <Reference Include="CodeX, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="CloudX.Shared" />
+    <Reference Include="CodeX">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
     <Reference Include="FrooxEngine">
-      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\NeosVR\Neos_Data\Managed\FrooxEngine.dll</HintPath>
     </Reference>
     <Reference Include="NeosModLoader">
-      <HintPath>..\..\..\..\..\..\Neos\app\Libraries\NeosModLoader.dll</HintPath>
     </Reference>
-    <Reference Include="System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL" />
-    <Reference Include="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\Neos\app\Neos_Data\Managed\System.Drawing.dll</HintPath>
+    <Reference Include="System" />
+    <Reference Include="System.Drawing">
     </Reference>
-    <Reference Include="System.Runtime, Version=4.1.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="System.Runtime" />
+    <Reference Include="System.Runtime.CompilerServices.Unsafe" />
+    <Reference Include="System.ValueTuple" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HTMLConverter.cs" />
     <Compile Include="IConverter.cs" />
     <Compile Include="PageRange.cs" />
-    <Compile Include="PDFConverter.cs" />
     <Compile Include="ImportConfig.cs" />
     <Compile Include="ImportConfigurator.cs" />
-    <Compile Include="NeosDocumentImport.cs" />
+    <Compile Include="NeosDocumentImportMod.cs" />
     <Compile Include="DocumentImporter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SVGConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Docnet.Core">
-      <Version>2.4.0-alpha.6</Version>
-    </PackageReference>
-    <PackageReference Include="PuppeteerSharp">
-      <Version>9.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="Svg">
-      <Version>3.4.4</Version>
-    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetDir)\$(TargetFileName)" "C:\Neos\app\nml_mods\"</PostBuildEvent>
+    <PostBuildEvent>copy "$(TargetDir)\$(TargetFileName)" "$(NeosPath)\nml_mods\"</PostBuildEvent>
   </PropertyGroup>
-  <Import Project="..\packages\Docnet.Core.2.3.1\build\net45\Docnet.Core.targets" Condition="Exists('..\packages\Docnet.Core.2.3.1\build\net45\Docnet.Core.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Docnet.Core.2.3.1\build\net45\Docnet.Core.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Docnet.Core.2.3.1\build\net45\Docnet.Core.targets'))" />
-  </Target>
 </Project>
