--- a/NeosDocumentImport_SVGConverter/NeosDocumentImport_SVGConverter.csproj
+++ b/NeosDocumentImport_SVGConverter/NeosDocumentImport_SVGConverter.csproj
@@ -38,6 +38,7 @@
       <SpecificVersion>False</SpecificVersion>
     </Reference>
     <Reference Include="CodeX" />
+    <Reference Include="FrooxEngine, Version=2022.1.28.1310, Culture=neutral, PublicKeyToken=null" />
     <Reference Include="NeosModLoader">
     </Reference>
     <Reference Include="System" />
@@ -69,6 +70,6 @@
     <PostBuildEvent>copy "$(TargetDir)\$(TargetFileName)" "$(NeosPath)\nml_mods\"
 copy "$(TargetDir)\ExCSS.dll" "$(NeosPath)\nml_libs\"
 copy "$(TargetDir)\Fizzler.dll" "$(NeosPath)\nml_libs\"
-copy "$(TargetDir)\Svg.dll" "$(NeosPath)\nml_libs\"</PostBuildEvent>	
+copy "$(TargetDir)\Svg.dll" "$(NeosPath)\nml_libs\"</PostBuildEvent>
   </PropertyGroup>
 </Project>
