--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
         uses: neos-modding-group/neos-plugin-setup-action@master
         #TODO: check for possible caching of neos build env
       - name: lint
-        run: dotnet format --verbosity detailed --verify-no-changes ./NeosModLoader.sln
+        run: dotnet format --verbosity detailed --verify-no-changes ./NeosDocumentImport.sln
       - name: build binaries, create release directory structure
         run: |
           dotnet build ./NeosDocumentImport.sln --configuration Release
