--- a/NeosDocumentImport_PDFConverter/NeosDocumentImport_PDFConverter.csproj
+++ b/NeosDocumentImport_PDFConverter/NeosDocumentImport_PDFConverter.csproj
@@ -10,6 +10,7 @@
     <RootNamespace>NeosDocumentImport_PDFConverter</RootNamespace>
     <AssemblyName>NeosDocumentImport_PDFConverter</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+	<TargetFramework>net462</TargetFramework>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
