--- a/NeosDocumentImport_SVGConverter/NeosDocumentImport_SVGConverter.csproj
+++ b/NeosDocumentImport_SVGConverter/NeosDocumentImport_SVGConverter.csproj
@@ -10,6 +10,7 @@
     <RootNamespace>NeosDocumentImport_SVGConverter</RootNamespace>
     <AssemblyName>NeosDocumentImport_SVGConverter</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+	<TargetFramework>net462</TargetFramework>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
