--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -1,9 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+	<TargetFramework>net462</TargetFramework>
+    <ImplicitUsings>false</ImplicitUsings>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
