--- a/NeosDocumentImport_PDFConverter/NeosDocumentImport_PDFConverter.csproj
+++ b/NeosDocumentImport_PDFConverter/NeosDocumentImport_PDFConverter.csproj
@@ -1,83 +1,46 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8DD0502D-E3E2-497B-B750-A093CC013D3F}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NeosDocumentImport_PDFConverter</RootNamespace>
-    <AssemblyName>NeosDocumentImport_PDFConverter</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
+    <TargetFramework>net462</TargetFramework>
+    <AssemblyTitle>NeosDocumentImport_PDFConverter</AssemblyTitle>
+    <Product>NeosDocumentImport_PDFConverter</Product>
+    <Copyright>Copyright ©  2023</Copyright>
+    <OutputPath>bin\$(Configuration)\</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>
+copy "$(AssemblyName).dll" "$(NeosPath)\nml_mods\"
+copy "pdfium.dll" "$(NeosPath)\"
+copy "Docnet.Core.dll" "$(NeosPath)\nml_libs\"
+    </PostBuildEvent>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="BaseX">
-      <SpecificVersion>False</SpecificVersion>
+      <HintPath>$(NeosPath)\Neos_Data\Managed\BaseX.dll</HintPath>
     </Reference>
-    <Reference Include="CodeX" />
+    <Reference Include="CodeX">
+      <HintPath>$(NeosPath)\Neos_Data\Managed\CodeX.dll</HintPath>
+    </Reference>
     <Reference Include="FrooxEngine">
-      <SpecificVersion>False</SpecificVersion>
+      <HintPath>$(NeosPath)\Neos_Data\Managed\FrooxEngine.dll</HintPath>
     </Reference>
     <Reference Include="NeosModLoader">
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing">
-      <SpecificVersion>False</SpecificVersion>
+      <HintPath>$(NeosPath)\Libraries\NeosModLoader.dll</HintPath>
     </Reference>
     <Reference Include="System.ValueTuple" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PDFConverter.cs" />
-    <Compile Include="PDFConverterMod.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <ProjectReference Include="..\NeosDocumentImport\NeosDocumentImport.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <PackageReference Include="Docnet.Core" Version="2.3.1" />
   </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Connected Services\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\NeosDocumentImport\NeosDocumentImport.csproj">
-      <Project>{0322b2ef-7452-479d-bae2-fcab75033337}</Project>
-      <Name>NeosDocumentImport</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Docnet.Core">
-      <Version>2.3.1</Version>
-    </PackageReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetDir)\$(TargetFileName)" "$(NeosPath)\nml_mods\"
-copy "$(TargetDir)\pdfium.dll" "$(NeosPath)\"
-copy "$(TargetDir)\Docnet.Core.dll" "$(NeosPath)\nml_libs\"</PostBuildEvent>
-  </PropertyGroup>
 </Project>
