--- a/NeosDocumentImport/NeosDocumentImport.csproj
+++ b/NeosDocumentImport/NeosDocumentImport.csproj
@@ -15,8 +15,10 @@
   <PropertyGroup>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
-  <PropertyGroup>
-    <PostBuildEvent>copy "$(AssemblyName).dll" "$(NeosPath)\nml_mods\"</PostBuildEvent>
+  <PropertyGroup Condition=" '$(BUILD_TYPE)' != 'CICD' ">
+    <PostBuildEvent>
+copy "$(AssemblyName).dll" "$(NeosPath)\nml_mods\"
+    </PostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
