--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,7 @@ jobs:
         run: dotnet format --verbosity detailed --verify-no-changes ./NeosDocumentImport.sln
       - name: build binaries, create release directory structure
         run: |
-          #TODO: make it compile windows libraries
-          dotnet build ./NeosDocumentImport.sln --configuration Release
+          dotnet build ./NeosDocumentImport.sln --configuration Release --runtime win-x64
 
           mkdir ./release
           mkdir ./release/nml_mods
