--- a/NeosDocumentImport/NeosDocumentImport.csproj
+++ b/NeosDocumentImport/NeosDocumentImport.csproj
@@ -5,6 +5,7 @@
     <Product>NeosDocumentImport</Product>
     <Copyright>Copyright ©  2021</Copyright>
     <OutputPath>bin\$(Configuration)\</OutputPath>
+	<RuntimeIdentifier>win-x64</RuntimeIdentifier>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugType>full</DebugType>
