--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net462</TargetFramework>
     <ImplicitUsings>false</ImplicitUsings>
     <IsPackable>false</IsPackable>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
