--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,7 @@ on: [push, pull_request]
 
 env:
   NeosPath: "${{ github.workspace }}/neos_install/" #see neos-modding-group/neos-plugin-setup-action
+  BUILD_TYPE: "CICD"
 
 jobs:
   build:
@@ -15,31 +16,32 @@ jobs:
         #TODO: check for possible caching of neos build env
       - name: download NeosModLoader and Harmony
         run: |
-          mkdir -p "$(NeosPath)/nml_libs" "$(NeosPath)/Libraries"
-          cd "$(NeosPath)/nml_libs" && wget "https://github.com/neos-modding-group/NeosModLoader/releases/latest/download/0Harmony.dll"
-          cd "$(NeosPath)/Libraries" && wget "https://github.com/neos-modding-group/NeosModLoader/releases/latest/download/NeosModLoader.dll"
+          mkdir -p "${NeosPath}/nml_libs" "${NeosPath}/Libraries"
+          cd "${NeosPath}/nml_libs" && wget "https://github.com/neos-modding-group/NeosModLoader/releases/latest/download/0Harmony.dll"
+          cd "${NeosPath}/Libraries" && wget "https://github.com/neos-modding-group/NeosModLoader/releases/latest/download/NeosModLoader.dll"
       - name: lint
         run: dotnet format --verbosity detailed --verify-no-changes ./NeosDocumentImport.sln
       - name: build binaries, create release directory structure
         run: |
           dotnet build ./NeosDocumentImport.sln --configuration Release
+
           mkdir ./release
           mkdir ./release/nml_mods
           mkdir ./release/nml_libs
           
-          mv ./NeosDocumentImport/bin/Release/NeosDocumentImport.dll ./release/nml_mods/NeosDocumentImport.dll
+          mv ./NeosDocumentImport/bin/Release/net462/win-x64/NeosDocumentImport.dll ./release/nml_mods/NeosDocumentImport.dll
           
-          mv ./NeosDocumentImport_HTMLConverter/bin/Release/NeosDocumentImport_HTMLConverter.dll ./release/nml_mods/NeosDocumentImport_HTMLConverter.dll
-          mv ./NeosDocumentImport_HTMLConverter/bin/Release/PuppeteerSharp.dll ./release/nml_libs/PuppeteerSharp.dll
+          mv ./NeosDocumentImport_HTMLConverter/bin/Release/net462/win-x64/NeosDocumentImport_HTMLConverter.dll ./release/nml_mods/NeosDocumentImport_HTMLConverter.dll
+          mv ./NeosDocumentImport_HTMLConverter/bin/Release/net462/win-x64/PuppeteerSharp.dll ./release/nml_libs/PuppeteerSharp.dll
           
-          mv ./NeosDocumentImport_PDFConverter/bin/Release/NeosDocumentImport_PDFConverter.dll ./release/nml_mods/NeosDocumentImport_PDFConverter.dll
-          mv ./NeosDocumentImport_PDFConverter/bin/Release/pdfium.dll ./release/pdfium.dll
-          mv ./NeosDocumentImport_PDFConverter/bin/Release/Docnet.Core.dll ./release/nml_libs/Docnet.Core.dll
+          mv ./NeosDocumentImport_PDFConverter/bin/Release/net462/win-x64/NeosDocumentImport_PDFConverter.dll ./release/nml_mods/NeosDocumentImport_PDFConverter.dll
+          mv ./NeosDocumentImport_PDFConverter/bin/Release/net462/win-x64/pdfium.dll ./release/pdfium.dll
+          mv ./NeosDocumentImport_PDFConverter/bin/Release/net462/win-x64/Docnet.Core.dll ./release/nml_libs/Docnet.Core.dll
           
-          mv ./NeosDocumentImport_SVGConverter/bin/Release/NeosDocumentImport_SVGConverter.dll ./release/nml_mods/NeosDocumentImport_SVGConverter.dll
-          mv ./NeosDocumentImport_SVGConverter/bin/Release/ExCSS.dll ./release/nml_libs/ExCSS.dll
-          mv ./NeosDocumentImport_SVGConverter/bin/Release/Fizzler.dll ./release/nml_libs/Fizzler.dll
-          mv ./NeosDocumentImport_SVGConverter/bin/Release/Svg.dll ./release/nml_libs/Svg.dll
+          mv ./NeosDocumentImport_SVGConverter/bin/Release/net462/win-x64/NeosDocumentImport_SVGConverter.dll ./release/nml_mods/NeosDocumentImport_SVGConverter.dll
+          mv ./NeosDocumentImport_SVGConverter/bin/Release/net462/win-x64/ExCSS.dll ./release/nml_libs/ExCSS.dll
+          mv ./NeosDocumentImport_SVGConverter/bin/Release/net462/win-x64/Fizzler.dll ./release/nml_libs/Fizzler.dll
+          mv ./NeosDocumentImport_SVGConverter/bin/Release/net462/win-x64/Svg.dll ./release/nml_libs/Svg.dll
           
       - name: Archive Release
         uses: thedoctor0/zip-release@0.7.0
