Removed HTML converter, improved multi-import and import of raw files from world (#10)
* removed HTML converter due to insecure library involved
* improved multi-import behaviour
* added overrides to extension based AssetClass detection to fix import of raw files from within the world
* fixed asset download to properly use AssetManager (pasting assetdb/local Uris works!)
* added option to skip document conversion
closes #4, #5, #8

--- a/NeosDocumentImport/NeosDocumentImport.csproj
+++ b/NeosDocumentImport/NeosDocumentImport.csproj
@@ -45,6 +45,9 @@ copy "$(AssemblyName).dll" "$(NeosPath)\nml_mods\"
     <Reference Include="System.Runtime.CompilerServices.Unsafe">
       <HintPath>$(NeosPath)\Neos_Data\Managed\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
+    <Reference Include="System.Threading.Tasks.Extensions">
+      <HintPath>$(NeosPath)\Neos_Data\Managed\System.Threading.Tasks.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="System.ValueTuple">
       <HintPath>$(NeosPath)\Neos_Data\Managed\System.ValueTuple.dll</HintPath>
     </Reference>
