Made build.yml more modular, added artifacts for individual files (#13)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,8 @@ permissions:
 env:
   NeosPath: "${{ github.workspace }}/neos_install/" #see neos-modding-group/neos-plugin-setup-action
   BUILD_TYPE: "CICD"
+  PUBLISH_ARTIFACTS: ${{ startsWith(github.ref, 'refs/tags/') || contains(github.ref, 'publish-test') }}
+  UPLOAD_ARTIFACTS: ${{ startsWith(github.ref, 'refs/tags/') || contains(github.ref, 'publish-test') || github.ref == 'refs/heads/main' || contains(github.ref, 'upload-test') }} # only publish workflow artifacts for pushes to main or tags
 
 jobs:
   build:
@@ -42,6 +44,7 @@ jobs:
           mv ./NeosDocumentImport_SVGConverter/bin/Release/net462/win-x64/ExCSS.dll ./release/nml_libs/ExCSS.dll
           mv ./NeosDocumentImport_SVGConverter/bin/Release/net462/win-x64/Fizzler.dll ./release/nml_libs/Fizzler.dll
           mv ./NeosDocumentImport_SVGConverter/bin/Release/net462/win-x64/Svg.dll ./release/nml_libs/Svg.dll
+
       - name: Archive Release
         uses: thedoctor0/zip-release@0.7.0
         with:
@@ -49,19 +52,81 @@ jobs:
           filename: 'NeosDocumentImport.zip'
           path: '.'
           directory: './release'
-      - name: calculate SHA256
+      - name: Calculate SHA256
         run: sha256sum ./release/*.dll ./release/*/*.dll ./release/*.zip
-      - name: Upload artifacts
-        if: startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main' # only publish workflow artifacts for pushes to main or tags
+          
+      - name: Upload artifacts (zip)
+        if: ${{ env.UPLOAD_ARTIFACTS == 'true' }}
         uses: actions/upload-artifact@v3
         with:
           name: NeosDocumentImport
           path: ./release/NeosDocumentImport.zip
+
+      - name: Upload artifacts (nml_mods/NeosDocumentImport.dll)
+        if: ${{ env.UPLOAD_ARTIFACTS == 'true' }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: NeosDocumentImport.dll
+          path: ./release/nml_mods/NeosDocumentImport.dll
           if-no-files-found: error
+          
+      - name: Upload artifacts (nml_mods/NeosDocumentImport_PDFConverter.dll)
+        if: ${{ env.UPLOAD_ARTIFACTS == 'true' }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: NeosDocumentImport_PDFConverter.dll
+          path: ./release/nml_mods/NeosDocumentImport_PDFConverter.dll
+          if-no-files-found: error
+      - name: Upload artifacts (pdfium.dll)
+        if: ${{ env.UPLOAD_ARTIFACTS == 'true' }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: pdfium.dll
+          path: ./release/pdfium.dll
+          if-no-files-found: error
+      - name: Upload artifacts (nml_libs/Docnet.Core.dll)
+        if: ${{ env.UPLOAD_ARTIFACTS == 'true' }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: Docnet.Core.dll
+          path: ./release/nml_libs/Docnet.Core.dll
+          if-no-files-found: error
+          
+      - name: Upload artifacts (nml_mods/NeosDocumentImport_SVGConverter.dll)
+        if: ${{ env.UPLOAD_ARTIFACTS == 'true' }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: NeosDocumentImport_SVGConverter.dll
+          path: ./release/nml_mods/NeosDocumentImport_SVGConverter.dll
+          if-no-files-found: error
+      - name: Upload artifacts (nml_libs/ExCSS.dll)
+        if: ${{ env.UPLOAD_ARTIFACTS == 'true' }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: ExCSS.dll
+          path: ./release/nml_libs/ExCSS.dll
+          if-no-files-found: error
+      - name: Upload artifacts (nml_libs/Fizzler.dll)
+        if: ${{ env.UPLOAD_ARTIFACTS == 'true' }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: Fizzler.dll
+          path: ./release/nml_libs/Fizzler.dll
+          if-no-files-found: error
+      - name: Upload artifacts (nml_libs/Svg.dll)
+        if: ${{ env.UPLOAD_ARTIFACTS == 'true' }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: Svg.dll
+          path: ./release/nml_libs/Svg.dll
+          if-no-files-found: error
+          
       - name: Create release draft
-        if: startsWith(github.ref, 'refs/tags/')
+        if: ${{ env.PUBLISH_ARTIFACTS == 'true' }}
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            ./release/NeosDocumentImport.zip
+            ./release/*.zip
+            ./release/*.dll
+            ./release/*/*.dll
           draft: true
